// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logo - Snapshots > matches snapshot for Logo with custom className 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm flex items-center min-h-[36px] min-w-[109px] custom-logo-style"
  data-cy="header-logo"
  href="/home"
>
  <img
    alt="Pubky"
    class="-mt-1 h-[36px] w-[109px]"
    data-testid="logo-image"
    height="36"
    src="/pubky-logo.svg"
    width="109"
  />
</a>
`;

exports[`Logo - Snapshots > matches snapshot for Logo with custom dimensions 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm flex items-center"
  data-cy="header-logo"
  href="/home"
  style="min-width: 200px; min-height: 80px;"
>
  <img
    alt="Pubky"
    class="-mt-1"
    data-testid="logo-image"
    height="80"
    src="/pubky-logo.svg"
    width="200"
  />
</a>
`;

exports[`Logo - Snapshots > matches snapshot for default Logo 1`] = `
<a
  class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm flex items-center min-h-[36px] min-w-[109px]"
  data-cy="header-logo"
  href="/home"
>
  <img
    alt="Pubky"
    class="-mt-1 h-[36px] w-[109px]"
    data-testid="logo-image"
    height="36"
    src="/pubky-logo.svg"
    width="109"
  />
</a>
`;
